Define MockFrameTransformer in api/test/.
Add MockFrameTransformer to api/test/, and remove definitions from unit
test files.

Bug: webrtc:11380
Change-Id: Ia709883e8d000852e3f71e7bfb87877072e22aeb

--- a/api/BUILD.gn
+++ b/api/BUILD.gn
@@ -925,6 +925,18 @@ if (rtc_include_tests) {
     ]
   }
 
+  rtc_library("mock_frame_transformer") {
+    visibility = [ "*" ]
+
+    testonly = true
+    sources = [ "test/mock_frame_transformer.h" ]
+
+    deps = [
+      "../api:frame_transformer_interface",
+      "../test:test_support",
+    ]
+  }
+
   rtc_source_set("fake_media_transport") {
     testonly = true
 
