--- a/video/BUILD.gn
+++ b/video/BUILD.gn
@@ -532,6 +532,7 @@ if (rtc_include_tests) {
       "../api:libjingle_peerconnection_api",
       "../api:mock_fec_controller_override",
       "../api:mock_frame_decryptor",
+      "../api:mock_frame_transformer",
       "../api:mock_video_encoder",
       "../api:rtp_headers",
       "../api:rtp_parameters",
