--- a/api/BUILD.gn
+++ b/api/BUILD.gn
@@ -937,6 +937,18 @@ if (rtc_include_tests) {
     ]
   }
 
+  rtc_library("mock_transformable_frame") {
+    visibility = [ "*" ]
+
+    testonly = true
+    sources = [ "test/mock_transformable_frame.h" ]
+
+    deps = [
+      "../api:frame_transformer_interface",
+      "../test:test_support",
+    ]
+  }
+
   rtc_source_set("fake_media_transport") {
     testonly = true
 
