Add unit tests for audio receive channel frame transformer delegate.
Bug: webrtc:11380
Change-Id: I4630b75c83886d722e7be64d50a9790c20956ba4

--- a/audio/BUILD.gn
+++ b/audio/BUILD.gn
@@ -127,6 +127,7 @@ if (rtc_include_tests) {
       "audio_send_stream_tests.cc",
       "audio_send_stream_unittest.cc",
       "audio_state_unittest.cc",
+      "channel_receive_frame_transformer_delegate_unittest.cc",
       "mock_voe_channel_proxy.h",
       "remix_resample_unittest.cc",
       "test/audio_stats_test.cc",
@@ -138,6 +139,8 @@ if (rtc_include_tests) {
       "../api:mock_audio_mixer",
       "../api:mock_frame_decryptor",
       "../api:mock_frame_encryptor",
+      "../api:mock_frame_transformer",
+      "../api:mock_transformable_frame",
       "../api/audio:audio_frame_api",
       "../api/audio_codecs:audio_codecs_api",
       "../api/audio_codecs/opus:audio_decoder_opus",
