[Adaptation] Misc tests for processor, input provider and restrictions.
Change-Id: If95f69644aaf2b43e3b19d5729bedef0b438c77b

--- a/api/video/test/BUILD.gn
+++ b/api/video/test/BUILD.gn
@@ -35,3 +35,14 @@ rtc_source_set("mock_recordable_encoded_frame") {
     "../../../test:test_support",
   ]
 }
+
+rtc_source_set("mock_video_stream_encoder_observer") {
+  testonly = true
+  visibility = [ "*" ]
+  sources = [ "mock_video_stream_encoder_observer.h" ]
+
+  deps = [
+    "..:video_stream_encoder",
+    "../../../test:test_support",
+  ]
+}
