--- a/rtc_base/BUILD.gn
+++ b/rtc_base/BUILD.gn
@@ -833,12 +833,10 @@ rtc_library("rtc_base") {
     "openssl.h",
     "openssl_adapter.cc",
     "openssl_adapter.h",
-    "openssl_certificate.cc",
-    "openssl_certificate.h",
     "openssl_digest.cc",
     "openssl_digest.h",
-    "openssl_identity.cc",
-    "openssl_identity.h",
+    "openssl_key_pair.cc",
+    "openssl_key_pair.h",
     "openssl_session_cache.cc",
     "openssl_session_cache.h",
     "openssl_stream_adapter.cc",
@@ -884,6 +882,23 @@ rtc_library("rtc_base") {
     "unique_id_generator.cc",
     "unique_id_generator.h",
   ]
+
+  if (rtc_build_ssl) {
+    sources += [
+      "boringssl_certificate.cc",
+      "boringssl_certificate.h",
+      "boringssl_identity.cc",
+      "boringssl_identity.h",
+    ]
+  }
+  if (!rtc_build_ssl || rtc_builtin_ssl_root_certificates) {
+    sources += [
+      "openssl_certificate.cc",
+      "openssl_certificate.h",
+      "openssl_identity.cc",
+      "openssl_identity.h",
+    ]
+  }
 
   if (build_with_chromium) {
     include_dirs = [ "../../boringssl/src/include" ]
